[gd_scene load_steps=6 format=2]

[ext_resource path="res://Assets/sign.png" type="Texture" id=1]
[ext_resource path="res://Pickubles/TutorialSign.gd" type="Script" id=2]
[ext_resource path="res://Assets/Interaction.png" type="Texture" id=3]
[ext_resource path="res://Assets/tutorial1.png" type="Texture" id=4]

[sub_resource type="CircleShape2D" id=1]
radius = 21.0

[node name="TutorialSign" type="Area2D"]
position = Vector2( 0, -8 )
collision_layer = 0
collision_mask = 2
script = ExtResource( 2 )
spriteTexture = ExtResource( 4 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource( 1 )

[node name="Sprite" type="Sprite" parent="."]
texture = ExtResource( 1 )

[node name="InteractSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -18 )
texture = ExtResource( 3 )

[node name="TutorialSprite" type="Sprite" parent="."]
visible = false
position = Vector2( 0, -23 )
texture = ExtResource( 4 )

[connection signal="body_entered" from="." to="." method="PlayerEntered"]
[connection signal="body_exited" from="." to="." method="PlayerLeft"]
